services/excalidraw/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: excalidraw
  namespace: excalidraw
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  ingressClassName: traefik
  rules:
  - host: excalidraw.completeautomate.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: excalidraw
            port:
              number: 80
  tls:
  - hosts:
    - excalidraw.completeautomate.com
